--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="type">我是 KID，我是一個</div>
     <script src="./typeEffect.js"></script>
 </body>
 </html>
