新增打字區塊與游標效果

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="type">我是 KID，我是一個</div>
+    <div id="type">我是 KID，我是一個<span id="type-box"></span></div>
     <script src="./typeEffect.js"></script>
 </body>
 </html>
